<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HeV-gr-PFG">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="YAQ-up-CEf">
                                <rect key="frame" x="0.0" y="293.5" width="375" height="80"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwF-d1-VTU">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="photo button"/>
                                        <state key="normal" title="Photo"/>
                                        <connections>
                                            <segue destination="lgn-Pb-QE9" kind="show" id="tPd-Oz-mln"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="24n-ws-H5B">
                                        <rect key="frame" x="0.0" y="50" width="375" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="video button"/>
                                        <state key="normal" title="Video"/>
                                        <connections>
                                            <segue destination="OXH-6d-MbW" kind="show" id="0r4-zy-3Be"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="YAQ-up-CEf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1xy-Ly-hf2"/>
                            <constraint firstItem="YAQ-up-CEf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OnJ-MN-hHH"/>
                            <constraint firstItem="YAQ-up-CEf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ciA-U0-wxV"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YAQ-up-CEf" secondAttribute="trailing" id="ee7-PF-piN"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="Cyq-ZF-fZ0"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
        </scene>
        <!--Image View Controller-->
        <scene sceneID="TrA-xd-IPq">
            <objects>
                <viewController id="lgn-Pb-QE9" customClass="ImageViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="32v-vG-qIt">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fdm-xE-cqt">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <accessibility key="accessibilityConfiguration" label="imageView"/>
                                <gestureRecognizers/>
                                <connections>
                                    <outletCollection property="gestureRecognizers" destination="z4K-sk-UWW" appends="YES" id="c2c-ew-fXQ"/>
                                    <outletCollection property="gestureRecognizers" destination="8K6-TD-tbf" appends="YES" id="URd-Uc-ttg"/>
                                </connections>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SiO-XF-Hk0">
                                <rect key="frame" x="320" y="617" width="33" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="gyro button"/>
                                <state key="normal" title="Gyro"/>
                                <connections>
                                    <action selector="actionSheetPopup:" destination="lgn-Pb-QE9" eventType="touchUpInside" id="qPp-GT-VpG"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Fdm-xE-cqt" firstAttribute="trailing" secondItem="4Og-38-fBf" secondAttribute="trailing" id="4S7-1S-vie"/>
                            <constraint firstItem="Fdm-xE-cqt" firstAttribute="top" secondItem="32v-vG-qIt" secondAttribute="top" id="EyV-PS-E5w"/>
                            <constraint firstItem="Fdm-xE-cqt" firstAttribute="leading" secondItem="4Og-38-fBf" secondAttribute="leading" id="KV8-gT-GNd"/>
                            <constraint firstItem="Fdm-xE-cqt" firstAttribute="bottom" secondItem="4Og-38-fBf" secondAttribute="bottom" id="MUa-jV-hUk"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="4Og-38-fBf"/>
                    </view>
                    <connections>
                        <outlet property="imageView" destination="Fdm-xE-cqt" id="E59-y1-bva"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sZv-T1-jm0" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <swipeGestureRecognizer direction="right" id="z4K-sk-UWW">
                    <connections>
                        <action selector="swipNextImage:" destination="lgn-Pb-QE9" id="Heq-wt-PmA"/>
                    </connections>
                </swipeGestureRecognizer>
                <swipeGestureRecognizer direction="left" id="8K6-TD-tbf">
                    <connections>
                        <action selector="swipePrevImage:" destination="lgn-Pb-QE9" id="37S-IS-BJG"/>
                    </connections>
                </swipeGestureRecognizer>
            </objects>
            <point key="canvasLocation" x="1965.5999999999999" y="133.5832083958021"/>
        </scene>
        <!--Video Table View Controller-->
        <scene sceneID="nER-4d-bqM">
            <objects>
                <tableViewController id="OXH-6d-MbW" customClass="VideoTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Esz-Lq-fZx">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="video cell" id="NuL-n2-NHn">
                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NuL-n2-NHn" id="nfr-yy-fBE">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" label="video cell"/>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="OXH-6d-MbW" id="l0A-9A-V3P"/>
                            <outlet property="delegate" destination="OXH-6d-MbW" id="vp8-qg-QHG"/>
                        </connections>
                    </tableView>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="WQW-cX-L5Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1963" y="859"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Jhw-8y-j1u">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HeV-gr-PFG" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OB4-of-4js">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ji6-fQ-x6j"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BPU-hI-yh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="188" y="792.95352323838085"/>
        </scene>
    </scenes>
</document>
